--- a/notes/1.1-Introduction.md
+++ b/notes/1.1-Introduction.md
@@ -4,9 +4,20 @@
 Is the ability of machines to perform tasks that typically require human intelligence.
 Simulates human intelligence.
 
-## Machine Learning
+## Machine Learning (ML)
 Is a subset of AI that deals with the training of models and algorithms with/from data, identify patterns, and make decisions without being explicitly programmed.
 
 ## Data Science
 It involves extracting insights from data.
 Also includes, collecting, cleaning, visualization and storing data.
+
+## Importance of learning AI and Data Science:
+- High demand for AI and data-related roles.
+- Applications in various industries such as healthcare finance, tech, real estate among many others.
+- To gain skills such as problem-solving, analytics, programming.
+- To prepare for the future that is automation and AI-driven solutions.
+
+## First code
+```python
+# This is a simple Python program that prints "Hello, World!"
+print("Hello, World!")
