Updated resources, introduction, tools

--- a/notes/1.1-Introduction.md
+++ b/notes/1.1-Introduction.md
@@ -17,7 +17,28 @@ Also includes, collecting, cleaning, visualization and storing data.
 - To gain skills such as problem-solving, analytics, programming.
 - To prepare for the future that is automation and AI-driven solutions.
 
-## First code
+## Writing Your First Python Code: 
+
+In this section, we will write the first program in Python.
+
+## Getting Started: Installing Required Tools
+
+Before we begin writing the Python code, it's essential to set up the necessary tools. You will need:
+
+1. **VS Code (Visual Studio Code)** - A lightweight code editor that provides support for Python and many other languages.  
+   - **Installation Guide:** You can follow the installation instructions in the [resources section](resources/tools.md).
+
+2. **Python** - The programming language we'll be using to write the code.  
+   - **Installation Guide:** Python installation steps are also covered in the [Resources section](resources/tools.md).
+
+Once you've installed both of these tools, you're ready to write and run your first Python code!
+
+---
+
+### Python Code:
+
 ```python
-# This is a simple Python program that prints "Hello, World!"
-print("Hello, World!")
+# This is a simple Python program that prints "Hello, Welcome to LuxDev!"
+print("Hello, Welcome to LuxDev!")
+
+
