--- a/notes/1.1-Introduction.md
+++ b/notes/1.1-Introduction.md
@@ -26,10 +26,10 @@ In this section, we will write the first program in Python.
 Before we begin writing the Python code, it's essential to set up the necessary tools. You will need:
 
 1. **VS Code (Visual Studio Code)** - A lightweight code editor that provides support for Python and many other languages.  
-   - **Installation Guide:** You can follow the installation instructions in the [resources section](resources/tools.md).
+   - **Installation Guide:** You can follow the installation instructions in the [resources section](../resources/tools.md).
 
 2. **Python** - The programming language we'll be using to write the code.  
-   - **Installation Guide:** Python installation steps are also covered in the [Resources section](resources/tools.md).
+   - **Installation Guide:** Python installation steps are also covered in the [resources section](../resources/tools.md).
 
 Once you've installed both of these tools, you're ready to write and run your first Python code!
 
@@ -42,3 +42,6 @@ Once you've installed both of these tools, you're ready to write and run your fi
 print("Hello, Welcome to LuxDev!")
 
 
+
+
+[def]: ../resources/tools.md
