--- a/notes/1.2-Data_Structures_and_Algorithm.md
+++ b/notes/1.2-Data_Structures_and_Algorithm.md
@@ -52,7 +52,7 @@ thisdict = {
     "name": "Alice",
     "age": 25
 }
-
+```
 ---
 
 ### vi. Set Types
@@ -69,3 +69,26 @@ A collection of unique items.
 ```python
 thisset = {"apple", "banana", "cherry"}
 print(thisset)  # Output: {'apple', 'cherry', 'banana'}
+```
+### vii. Binary Types
+Store data in byte-oriented format.
+
+- **Bytes (bytes)**  
+- **Byte Array (bytearray)**  
+- **Memory View (memoryview)**
+
+### viii. None Type
+Represents the absence of values.
+
+- **None Type (NoneType)**
+
+```python
+# Example of None type
+x = None
+print(x)  # Output: None
+
+if x is None:
+    print("x has no value")
+```
+
+s
