--- a/notes/1.2-Data_Structures_and_Algorithm.md
+++ b/notes/1.2-Data_Structures_and_Algorithm.md
@@ -1,4 +1,4 @@
-# 1.2 DATA TYPES, DATA STRUCTURES
+# 1.2 DATA TYPES & DATA STRUCTURES
 
 ## Common Datatypes
 - Numeric Type
@@ -53,6 +53,7 @@ thisdict = {
     "age": 25
 }
 ```
+
 ---
 
 ### vi. Set Types
@@ -70,12 +71,17 @@ A collection of unique items.
 thisset = {"apple", "banana", "cherry"}
 print(thisset)  # Output: {'apple', 'cherry', 'banana'}
 ```
+
+---
+
 ### vii. Binary Types
 Store data in byte-oriented format.
 
 - **Bytes (bytes)**  
 - **Byte Array (bytearray)**  
 - **Memory View (memoryview)**
+
+---
 
 ### viii. None Type
 Represents the absence of values.
@@ -91,4 +97,5 @@ if x is None:
     print("x has no value")
 ```
 
-s
+---
+
