Added Lists and Working with Lists

--- a/notes/1.2-Data_Structures_and_Algorithm.md
+++ b/notes/1.2-Data_Structures_and_Algorithm.md
@@ -99,3 +99,112 @@ if x is None:
 
 ---
 
+## LISTS
+List
+Is a collection of items in a particular order. 
+
+```python
+# Creating Lists. Are mutable
+my_list = [1,2,3,4,'cup','plate'] 
+
+```
+### Accessing Elements in a List
+Index Positions start at 0 and not 1.
+The first item in a list has an index of o, the second has an index of 2 and so forth.
+
+```python
+my_list[0] #output is 1
+my_list[1] #output is 2
+my_list[4] #output is 'cup'
+my_list[5] #output is 'plate'
+
+```
+
+### Working with Lists
+### Adding Elements to a List
+
+```python
+my_list = [1,2,3] 
+my_list #output is 1,2,3
+
+my_list.append(4) #append() is a method that adds an element to the end of the list
+my_list #output is [1,2,3,4]
+
+```
+
+### Inserting Elements into a List
+
+```python
+motorcycles = ['honda', 'yamaha', 'suzuki']
+
+motorcycles.insert(0, 'kawasaki') #insert() is a method that adds an element at any position in your list.
+print(motorcycles) # output is ['kawasaki', 'honda', 'yamaha', 'suzuki']
+
+```
+
+### Removing Elements from a List
+ 
+### Using del
+
+```python
+motorcycles = ['kawasaki', 'honda', 'yamaha', 'suzuki']
+print (motorcycles)  # output is ['kawasaki', 'honda', 'yamaha', 'suzuki']
+
+del motorcycles[0] # del is a statement that deletes an element at any position in your list. Removes first item.
+print(motorcycles) #output is ['honda', 'yamaha', 'suzuki']
+
+motorcyles = ['honda', 'yamaha', 'suzuki']
+
+del motorcycles[1]
+print (motorcycles) # output is ['honda', 'suzuki']
+
+```
+
+### Using the pop() method
+pop() method removes the last item in a list, but lets you work with that item after removing it.
+
+```python
+motorcycles = ['honda', 'yamaha', 'suzuki']
+print(motorcycles)
+
+popped_motorcycle = motorcycles.pop()
+print(motorcycles) #the residue after removing the last item
+print(popped_motorcycle) #the removed item
+
+```
+Output:
+    ['honda', 'yamaha', 'suzuki']
+    ['honda', 'yamaha']
+    suzuki
+
+You can also remove items from any position.
+
+```python
+first_owned = motorcycles.pop(0)
+print (f"The first motorcycle I owned was a {first_owned.title()}.")
+# Removed 'honda'
+# title() is used to capitalize the first letter of the item.
+
+```
+
+Output:
+    The first motorcycle I owned was a Honda. 
+
+### Using remove() method
+This is great for when you do not the position of the item but you know its value.
+
+```python 
+motorcycles = ['honda', 'yamaha', 'suzuki', 'ducati']
+
+motorcycles.remove('ducati')
+print (motorcycles)
+
+```
+
+Output:
+    ['honda', 'yamaha', 'suzuki'] <!--'ducati' has been removed -->
+
+
+
+   
+
