--- a/notes/1.2-Data_Structures_and_Algorithm.md
+++ b/notes/1.2-Data_Structures_and_Algorithm.md
@@ -172,9 +172,9 @@ print(motorcycles) #the residue after removing the last item
 print(popped_motorcycle) #the removed item
 
 ```
-Output:
-    ['honda', 'yamaha', 'suzuki']
-    ['honda', 'yamaha']
+Output:<br>
+    ['honda', 'yamaha', 'suzuki'] <br>
+    ['honda', 'yamaha'] <br>
     suzuki
 
 You can also remove items from any position.
