--- a/notes/1.4-Measures_of_Central_Tendency.md
+++ b/notes/1.4-Measures_of_Central_Tendency.md
@@ -125,7 +125,7 @@ Percentiles divide data into 100 equal parts and help determine the rank of a va
 
 ---
 
-# CALCULATION FOR FINDING QUARTILES AND PERCENTILES
+## CALCULATION FOR FINDING QUARTILES AND PERCENTILES
 
 ## Finding Quartiles:
 
