--- a/assignments/assignment1.4.ipynb
+++ b/assignments/assignment1.4.ipynb
@@ -133,7 +133,37 @@
    "source": [
     "**When writing a report do we always start from the smallest or the largest percent.**\n",
     "\n",
-    "- "
+    "- For Emphasis we use largest to smallest\n",
+    "- To show progression over a period we use smallest to largest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 20th percentile value is: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Find the different percentiles for my_list\n",
+    "\n",
+    "my_list = [10, 19, 5, 30, 15, 17, 33, 40]\n",
+    "\n",
+    "# Sort the list in ascending order\n",
+    "my_list.sort()\n",
+    "\n",
+    "# Calculate the index for the 10th percentile\n",
+    "rank = 10 / 100 * (len(my_list) - 1)\n",
+    "\n",
+    "percentile_value = my_list[int(rank)]\n",
+    "\n",
+    "print(f\"The 20th percentile value is: {percentile_value}\")\n"
    ]
   }
  ],
