--- a/notes/2.2-Data_Visualization_Libraries.ipynb
+++ b/notes/2.2-Data_Visualization_Libraries.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# DATA VISUALIZATION LIBRARIES\n",
     "\n",
-    "There several types of data visualizations which we can categorize them into the following:\n",
+    "There are several types of data visualizations, which we can then categorize them into the following:\n",
     "\n",
     "**Basic Visualization**\n",
     "**Interactive Visualization**\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
     "### Advanced and Specialized Visualization\n",
     "- Altair\n",
     "- GGplot (Plotline)\n",
-    "- Folium"
+    "- Folium\n"
    ]
   }
  ],
